fixed ghost being too narrow

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 #spooky {
     margin:10% auto;
-    width:88%;
+    width:80%;
     height:80%;
     animation: floaty 2s infinite;
 
@@ -34,7 +34,7 @@ body {
 #spooky #body {
     position:relative;
     margin:50px auto 0;
-    width:100px;
+    width:180px;
     height:220px;
     background: #f2fbf1;
     border-top-left-radius:90px;
@@ -42,7 +42,7 @@ body {
 }
 
 #spooky #body:before, #spooky #body:after {
-    content:'';
+    content:' ';
     position:absolute;
     top:130px;
     display:inline-block;
@@ -72,7 +72,7 @@ body {
 }
 
 #spooky #body #eyes:before, #spooky #body #eyes:after {
-    content:'';
+    content:' ';
     display:block;
     width:30px;
     height:30px;
@@ -90,7 +90,7 @@ body {
 }
 
 #spooky #body #mouth:before {
-    content:'';
+    content:' ';
     display:block;
     background:#fff;
     margin-left:20px;
@@ -109,7 +109,7 @@ body {
 #spooky #body #feet > *, 
 #spooky #body #feet::before, 
 #spooky #body #feet::after {
-    content:'';
+    content:' ';
     width:36px;
     height:36px;
     background:#f2fbf1;
